[package]
name = "eustress-engine"
version = "0.1.0"
description = "EustressEngine - Desktop 3D Editor"
authors = ["EustressEngine Contributors"]
edition = "2021"

[package.metadata.winres]
OriginalFilename = "eustress-engine.exe"
LegalCopyright = "Copyright © 2025 EustressEngine Contributors"
FileDescription = "Eustress Engine - 3D Editor"
ProductName = "Eustress Engine"

[[bin]]
name = "eustress-engine"
path = "src/main.rs"

[[bin]]
name = "generate-benchmark-map"
path = "src/bin/generate_benchmark_map.rs"


[dependencies]
# Workspace members
eustress-common = { path = "../common", features = ["physics", "realism", "luau", "streaming", "iggy-streaming"] }
bevy-camera-controller = { path = "../common/bevy-camera-controller" }
eustress-geo = { path = "../geo" }
# TODO: Fix Bevy 0.17 compatibility issues in eustress-networking
# eustress-networking = { path = "../common/eustress-networking", features = ["server", "client", "physics"] }

# bevy_shader provides ShaderRef, used in MaterialExtension implementations (Bevy 0.18)
bevy_shader = { version = "0.18", default-features = false }

# Workspace dependencies (Bevy 0.18) - without audio to avoid windows conflicts
bevy = { workspace = true, default-features = false, features = [
    "bevy_log",
    "bevy_winit",
    "bevy_render",
    "bevy_pbr",
    "bevy_gizmos",
    "bevy_gltf",
    "bevy_scene",
    # "bevy_audio",  # DISABLED - uses cpal/rodio with Windows 0.54
    "bevy_state",
    "default_font",
    "bevy_asset",
    "bevy_animation",
    "bevy_color",
    "bevy_ui",
    "png",
    "hdr",
    "x11",
    "wayland",
    "multi_threaded",
    "tonemapping_luts",
    "zstd_rust",
] }
# Slint UI (software renderer + FemtoVG OpenGL GPU renderer)
slint = { workspace = true }
# CEF webview for browser tabs (macOS only currently)
bevy_cef = { git = "https://github.com/not-elm/bevy_cef", branch = "main", optional = true }
# Wry webview for browser tabs (Windows WebView2 / macOS WebKit / Linux WebKitGTK)
wry = { version = "0.53", optional = true }
# leafwing-input-manager = { workspace = true }  # DISABLED until Bevy 0.19 support
avian3d = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
bincode = { workspace = true }
ron = { workspace = true }
toml = "0.8"
uuid = { workspace = true }
parking_lot = { workspace = true }
chrono = { workspace = true }
dirs = { workspace = true }
rfd = { workspace = true }
mime_guess = "2"
blake3 = "1"
bitflags = "2"
zstd = "0.13"
ureq = { version = "2", features = ["json"] }
base64 = "0.22"
urlencoding = "2"
open = "5"
rune = "0.14"
rand = "0.8"
rayon = "1.10"
crossbeam = "0.8"
tracing = "0.1"
reqwest = { version = "0.12", features = ["json", "blocking"] }
notify = { version = "6.1", default-features = false, features = ["macos_fsevent"] }
notify-debouncer-full = "0.3"
csv = "1.3"
crossbeam-channel = "0.5"
syntect = { version = "5.2", default-features = false, features = ["default-syntaxes", "default-themes", "html", "regex-fancy"] }
sentry = { version = "0.34", default-features = false, features = ["backtrace", "contexts", "panic", "reqwest", "rustls"] }
# Window icon (must match bevy's versions)
image = "0.25"
winit = "0.30"
# WGPU version synced with Bevy 0.19 (wgpu 28)
# wgpu = "27"
# Note: Using Bevy's built-in wgpu instead of explicit dependency
# Raw window handle for Slint platform integration
raw-window-handle = "0.6"
# QUIC networking for Play Server
# Note: rustls 0.23 defaults to aws-lc-rs, we use ring to avoid cmake/nasm dependency
quinn = { version = "0.11", default-features = false, features = ["runtime-tokio", "rustls", "ring"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"] }
rcgen = "0.13"
# Tokio for async runtime
tokio = { version = "1", features = ["rt-multi-thread", "sync", "time", "net", "macros"] }
# DashMap for concurrent collections
dashmap = "6"
# Async channels for Slint+Bevy integration
smol = "2"
spin_on = "0.1"
# Byte casting for GPU buffer operations
bytemuck = { version = "1.16", features = ["derive"] }

[build-dependencies]
winres = "0.1"
resvg = "0.44"
ico = "0.3"
icns = "0.3"
png = "0.17"
slint-build = { git = "https://github.com/slint-ui/slint", branch = "master" }

[features]
default = []
dev = ["bevy/dynamic_linking"]
hotpatch = ["bevy/hotpatching"]
debug = ["bevy/bevy_debug_stepping"]
# CEF webview support (macOS only currently)
cef = ["bevy_cef"]
# Wry webview support (Windows/macOS/Linux)
webview = ["wry"]
# Rune scripting with VM pooling and ECS bindings
realism-scripting = []
# Iggy streaming: simulation results, iteration history, Rune audit trail
iggy-streaming = ["eustress-common/iggy-streaming"]
