[package]
name = "eustress-forge-sdk"
version = "0.1.0"
edition = "2021"
description = "Eustress Forge SDK - Developer tools for multiplayer orchestration"
authors = ["EustressEngine Contributors"]
license = "MIT OR Apache-2.0"

[dependencies]
# Core Forge client
eustress-forge = { path = "../forge" }

# Async runtime
tokio = { workspace = true }
futures = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = "1.0"

# Logging
tracing = "0.1"

# UUID
uuid = { workspace = true }

# Time
chrono = { workspace = true }

# HTTP client
reqwest = { version = "0.12", features = ["json"] }

# Configuration
config = "0.14"
toml = "0.8"

# CLI support
clap = { version = "4.0", features = ["derive"], optional = true }

[features]
default = []
cli = ["clap"]