[package]
name = "eustress-vortex-core"
version = "0.1.0"
edition = "2024"
description = "Domain-agnostic Vortex learning core: WorldState trait, CausalGraph, HypothesisTree, SymbolResolver, solve()"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
rand = "0.8"
uuid = { version = "1", features = ["v4", "serde"] }
