[package]
name = "eustress-vortex-scene3d"
version = "0.1.0"
edition = "2024"
description = "Scene3D WorldState for 3D workshop scenarios (Phase 2 stub)"

[dependencies]
eustress-vortex-core = { path = "../vortex-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
